apps/budgetapp-backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budgetapp-ingress
  namespace: budgetapp
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Enable SSL redirection for all paths
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: budgetapp.hagh.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: budgetapp-budgetapp-backend
                port:
                  number: 80
  tls:
    - hosts:
        - budgetapp.hagh.dk
      secretName: budgetapp-tls
